syntax = "proto3";
package types;

option go_package = "github.com/ginchuco/ginchu/fsm/types";

message Params {
  ConsensusParams Consensus = 1;
  ValidatorParams Validator = 2;
  FeeParams Fee = 3;
  GovernanceParams Governance = 4;
}

message ProtocolVersion {
  uint64 height = 1;
  uint64 version = 2;
}

message ConsensusParams {
  uint64 block_size = 1;
  string protocol_version = 2;
}

message ValidatorParams {
  string validator_min_stake = 1;
  uint64 validator_max_count = 2;
  uint64 validator_unstaking_blocks = 3;
  uint64 validator_max_pause_blocks = 5;
  uint64 validator_max_evidence_age_in_blocks = 6;
  uint64 validator_double_sign_slash_percentage = 7;
  uint64 validator_bad_proposal_slash_percentage = 8;
  uint64 validator_non_sign_slash_percentage = 9;
  uint64 validator_max_non_sign = 10;
  uint64 validator_non_sign_window = 11;
  uint64 validator_proposer_percentage_of_fees = 12;
  string validator_block_reward = 13;
}

message FeeParams {
  string message_send_fee = 1;
  string message_stake_fee = 2;
  string message_edit_stake_fee = 3;
  string message_unstake_fee = 4;
  string message_pause_fee = 5;
  string message_unpause_fee = 6;
  string message_change_parameter_fee = 7;
  string message_double_sign_fee = 8;
}

message GovernanceParams {
  uint64 dao_reward_percentage = 1;
}

enum ProposalVoteConfig {
  ACCEPT_ALL = 0;
  APPROVE_LIST = 1;
  REJECT_ALL = 2;
}